[gd_scene load_steps=6 format=3 uid="uid://cjk1sxt21gprp"]

[ext_resource type="Theme" uid="uid://cua1s23yijxy2" path="res://assets/themes_styles_groups/default_theme.tres" id="1_vrlws"]
[ext_resource type="Script" path="res://src/scenes/menus/pause_menu.gd" id="2_unpyo"]
[ext_resource type="ButtonGroup" uid="uid://cgb16fnt4hph0" path="res://assets/themes_styles_groups/pause_tabs_group.tres" id="3_5djap"]
[ext_resource type="PackedScene" uid="uid://c4vx8yyktgv1x" path="res://src/scenes/menus/settings_menu.tscn" id="3_rbksi"]
[ext_resource type="Theme" uid="uid://du78ff7f68edr" path="res://assets/themes_styles_groups/rich_label_default_theme.tres" id="4_kid2x"]

[node name="PauseMenu" type="Control" node_paths=PackedStringArray("_settings_menu", "_tab_container", "_info_label", "_build_label", "_weapon1_texture_rect", "_weapon1_label", "_weapon2_texture_rect", "_weapon2_label", "_activity_texture_rect", "_activity_label")]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = 2.0
offset_right = -1.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_vrlws")
script = ExtResource("2_unpyo")
_settings_menu = NodePath("SettingsMenu")
_tab_container = NodePath("MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/TabContainer")
_info_label = NodePath("MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/TabContainer/Stats/HBoxContainer/InfoLabel")
_build_label = NodePath("MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/TabContainer/Stats/HBoxContainer/BuildLabel")
_weapon1_texture_rect = NodePath("MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/TabContainer/Weapons/HBoxContainer/Weapon1VBox/Weapon1TextureRect")
_weapon1_label = NodePath("MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/TabContainer/Weapons/HBoxContainer/Weapon1VBox/Weapon1Label")
_weapon2_texture_rect = NodePath("MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/TabContainer/Weapons/HBoxContainer/Weapon2VBox/Weapon2TextureRect")
_weapon2_label = NodePath("MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/TabContainer/Weapons/HBoxContainer/Weapon2VBox/Weapon2Label")
_activity_texture_rect = NodePath("MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/TabContainer/Activity/ActivityVBox/ActivityTextureRect")
_activity_label = NodePath("MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/TabContainer/Activity/ActivityVBox/ActivityLabel")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(1080, 0)
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="StatsTabButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 48
toggle_mode = true
button_pressed = true
button_group = ExtResource("3_5djap")
text = "Stats"

[node name="WeaponsTabButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 48
toggle_mode = true
button_group = ExtResource("3_5djap")
text = "Weapons"

[node name="ActivityTabButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 48
toggle_mode = true
button_group = ExtResource("3_5djap")
text = "Activity"

[node name="TabContainer" type="TabContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
tabs_visible = false

[node name="Stats" type="TabBar" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/TabContainer/Stats"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="InfoLabel" type="RichTextLabel" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/TabContainer/Stats/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_kid2x")
bbcode_enabled = true
text = "cggghg"
fit_content = true
scroll_active = false

[node name="BuildLabel" type="RichTextLabel" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/TabContainer/Stats/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_kid2x")
bbcode_enabled = true
text = "Info info
Info!!!
And info
more info and info and info and info and info and info and info and info"
fit_content = true
scroll_active = false

[node name="Weapons" type="TabBar" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/TabContainer/Weapons"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Weapon1VBox" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/TabContainer/Weapons/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Weapon1TextureRect" type="TextureRect" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/TabContainer/Weapons/HBoxContainer/Weapon1VBox"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
expand_mode = 2
stretch_mode = 5

[node name="Weapon1Label" type="RichTextLabel" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/TabContainer/Weapons/HBoxContainer/Weapon1VBox"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("4_kid2x")
bbcode_enabled = true

[node name="Weapon2VBox" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/TabContainer/Weapons/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Weapon2TextureRect" type="TextureRect" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/TabContainer/Weapons/HBoxContainer/Weapon2VBox"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
expand_mode = 2
stretch_mode = 5

[node name="Weapon2Label" type="RichTextLabel" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/TabContainer/Weapons/HBoxContainer/Weapon2VBox"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("4_kid2x")
bbcode_enabled = true

[node name="Activity" type="TabBar" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/TabContainer"]
layout_mode = 2

[node name="ActivityVBox" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/TabContainer/Activity"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ActivityTextureRect" type="TextureRect" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/TabContainer/Activity/ActivityVBox"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
expand_mode = 2
stretch_mode = 5

[node name="ActivityLabel" type="RichTextLabel" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/TabContainer/Activity/ActivityVBox"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("4_kid2x")
bbcode_enabled = true
text = "sdjghjdfhgdfhgdfjghjdfhgjdfhjgdfjgdfjjhgdfg
fgfgfgfg
fgf"

[node name="ResumeButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "RESUME"

[node name="SettingsButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "SETTINGS"

[node name="MainMenuButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "GO TO MENU"

[node name="SettingsMenu" parent="." instance=ExtResource("3_rbksi")]
visible = false
layout_mode = 1

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="toggled" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/StatsTabButton" to="." method="_on_stats_tab_button_toggled"]
[connection signal="toggled" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/WeaponsTabButton" to="." method="_on_weapons_tab_button_toggled"]
[connection signal="toggled" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/ActivityTabButton" to="." method="_on_activity_tab_button_toggled"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
